// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxDetail style components Should render a AverageRank Component 1`] = `
.c0 {
  color: #53c4ff;
  font-weight: bold;
  text-transform: uppercase;
  margin-left: 15px;
}

<span
  className="c0"
/>
`;

exports[`BoxDetail style components Should render a BoxDetail Component 1`] = `
.c0 {
  background: #000;
  height: 5vw;
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  background: linear-gradient(bottom,rgba(0,0,0,1),rgba(0,0,0,.4));
  background: -webkit-linear-gradient(bottom,rgba(0,0,0,1),rgba(0,0,0,.4));
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  padding-top: 15px;
}

@media (max-width:768px) {
  .c0 {
    height: 10vw;
  }
}

@media (max-width:600px) {
  .c0 {
    height: 23vw;
  }
}

<div
  className="c0"
/>
`;

exports[`BoxDetail style components Should render a Detail Component 1`] = `
.c0 {
  position: absolute;
  bottom: 10px;
  left: 10px;
  font-size: 1.1vw;
}

@media (max-width:768px) {
  .c0 {
    font-size: 2vw;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 4vw;
  }
}

<div
  className="c0"
/>
`;

exports[`BoxDetail style components Should render a LinkBoxAnime 1`] = `
.c0 {
  display: inline-block;
  position: relative;
  margin-right: 30px;
  margin-bottom: 30px;
  text-align: center;
  padding: 15px;
  width: 13vw;
  height: 20vw;
  background-size: cover;
  color: #fff;
  border-radius: 5px;
}

@media (max-width:768px) {
  .c0 {
    width: 33vw;
    height: 40vw;
  }
}

@media (max-width:600px) {
  .c0 {
    width: 100%;
    height: 90vw;
    margin-right: 0px;
  }
}

<a
  className="c0"
  href="/"
  onClick={[Function]}
/>
`;

exports[`BoxDetail style components Should render a Title Component 1`] = `
.c0 {
  font-size: 1.1vw;
  font-weight: bold;
}

@media (max-width:768px) {
  .c0 {
    font-size: 2vw;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 5vw;
  }
}

<div
  className="c0"
/>
`;

exports[`BoxDetail style components Should render a Type Component 1`] = `
.c0 {
  color: #53c4ff;
  font-weight: bold;
  text-transform: uppercase;
}

<span
  className="c0"
/>
`;
